- Use Integer.valueOf. - Update restricted list a bit.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@407240 13f79535-47bb-0310-9956-ffa450edef68